fixed orphaned worker

--- a/solutions/03_durable_agent/solution.ipynb
+++ b/solutions/03_durable_agent/solution.ipynb
@@ -57,35 +57,15 @@
     "Before running this solution, ensure you have:\n",
     "\n",
     "1. **Temporal Server Running:**\n",
-    "   - Open `temporal_installation.ipynb` in the project root\n",
-    "   - Run all cells to install Temporal CLI and start the dev server\n",
-    "   - **Verify:** In Codespaces, go to the **Ports** tab → Find port **8233** → Click the **Globe icon** \n",
-    "\n",
-    "2. **Dependencies Installed:**\n",
-    "   - Required packages should already be installed from the main setup\n",
-    "\n",
-    "3. **API Key Configured:**\n",
-    "   - Ensure your `.env` file in the project root contains your OpenAI API key\n"
+    "   - Open `temporal_installation.ipynb` in the project root"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "28f6609a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "✅ All imports successful\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install --quiet temporalio openai-agents httpx nest-asyncio pytz\n",
     "\n",
@@ -118,18 +98,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ac13ca86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Activity 'get_weather' defined\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "async def make_api_call(state: str) -> dict:\n",
     "    \"\"\"Make API call to fetch weather alerts from National Weather Service.\"\"\"\n",
@@ -162,7 +134,7 @@
     "    data = await make_api_call(state)\n",
     "\n",
     "    # Broken API call to simulate failure\n",
-    "    #data = await make_api_call_bug(state)\n",
+    "    # data = await make_api_call_bug(state)\n",
     "\n",
     "    # Initialize empty list to collect alert information\n",
     "    alerts = []\n",
@@ -202,18 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "663a2ebc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Workflow 'WeatherAgentWorkflow' defined (task queue: agents-sdk-queue)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define which task queue this workflow will use for communication\n",
     "TASK_QUEUE = \"agents-sdk-queue\"\n",
@@ -267,75 +231,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3e2q9zrqb2t",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔄 Worker running in background\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Worker started on task queue: agents-sdk-queue\n",
-      "   Listening for workflow and activity tasks...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error getting response: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}. (request_id: req_f3305a8b29f81a88205b59220da47069)\n",
-      "Completing activity as failed ({'activity_id': '1', 'activity_type': 'invoke_model_activity', 'attempt': 1, 'namespace': 'default', 'task_queue': 'agents-sdk-queue', 'workflow_id': 'weather-wed-nov-12-035451est', 'workflow_run_id': '019a79d9-8c2a-7dbd-862d-229c8b710f3a', 'workflow_type': 'WeatherAgentWorkflow'})\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_invoke_model_activity.py\", line 216, in invoke_model_activity\n",
-      "    return await model.get_response(\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/agents/models/openai_responses.py\", line 90, in get_response\n",
-      "    response = await self._fetch_response(\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/agents/models/openai_responses.py\", line 306, in _fetch_response\n",
-      "    response = await self._client.responses.create(\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/resources/responses/responses.py\", line 2275, in create\n",
-      "    return await self._post(\n",
-      "           ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/_base_client.py\", line 1794, in post\n",
-      "    return await self.request(cast_to, opts, stream=stream, stream_cls=stream_cls)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/openai/_base_client.py\", line 1594, in request\n",
-      "    raise self._make_status_error_from_response(err.response) from None\n",
-      "openai.AuthenticationError: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 297, in _handle_start_activity_task\n",
-      "    result = await self._execute_activity(start, running_activity, task_token)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 610, in _execute_activity\n",
-      "    return await impl.execute_activity(input)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_trace_interceptor.py\", line 284, in execute_activity\n",
-      "    return await self.next.execute_activity(input)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/worker/_activity.py\", line 805, in execute_activity\n",
-      "    return await input.fn(*input.args)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_heartbeat_decorator.py\", line 22, in wrapper\n",
-      "    return await fn(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/home/vscode/.local/lib/python3.11/site-packages/temporalio/contrib/openai_agents/_invoke_model_activity.py\", line 258, in invoke_model_activity\n",
-      "    raise ApplicationError(\n",
-      "temporalio.exceptions.ApplicationError: Non retryable OpenAI status code\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "async def run_worker():  # Define async function to start and run the worker\n",
     "    \"\"\"Start a Temporal worker that listens for workflow and activity tasks.\"\"\"\n",
@@ -367,13 +266,12 @@
     "    # Start polling and executing tasks (blocks until stopped)\n",
     "    await worker.run()\n",
     "\n",
-    "# Apply nest_asyncio to allow nested event loops in Jupyter\n",
-    "# Allow async functions to be called from within other async contexts\n",
-    "# This is needed because Jupyter notebooks already run in an event loop\n",
     "nest_asyncio.apply()\n",
-    "# Create background task to run worker without blocking the notebook\n",
-    "# Create a task that runs the worker concurrently with other notebook operations\n",
     "worker_task = asyncio.create_task(run_worker())\n",
+    "\n",
+    "# Keep a reference to the first worker - we'll need this later!\n",
+    "first_worker_task = worker_task\n",
+    "\n",
     "print(\" Worker running in background\")"
    ]
   },
@@ -397,51 +295,7 @@
    "execution_count": null,
    "id": "jtkol3em4df",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🚀 Starting workflow: weather-wed-nov-12-035451est\n",
-      "📝 Query: What weather alerts are active in CA?\n",
-      "\n",
-      "✅ Workflow started: weather-wed-nov-12-035451est\n",
-      "🔗 View in Temporal UI: http://localhost:8233/namespaces/default/workflows/weather-wed-nov-12-035451est\n",
-      "\n",
-      "⏳ Waiting for agent response...\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "WorkflowFailureError",
-     "evalue": "Workflow execution failed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mApplicationError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[31mApplicationError\u001b[39m: AuthenticationError: Error code: 401 - {'error': {'message': 'Missing bearer or basic authentication in header', 'type': 'invalid_request_error', 'param': None, 'code': None}}",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mApplicationError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[31mApplicationError\u001b[39m: Non retryable OpenAI status code",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mActivityError\u001b[39m                             Traceback (most recent call last)",
-      "\u001b[31mActivityError\u001b[39m: Activity task failed",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mWorkflowFailureError\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     46\u001b[39m     loop = asyncio.get_running_loop()\n\u001b[32m     47\u001b[39m     \u001b[38;5;66;03m# Execute in existing loop\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     \u001b[38;5;28;01mawait\u001b[39;00m run_solution()\n\u001b[32m     49\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m:\n\u001b[32m     50\u001b[39m     \u001b[38;5;66;03m# If no loop exists, create new one and run\u001b[39;00m\n\u001b[32m     51\u001b[39m     asyncio.run(run_solution())\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 35\u001b[39m, in \u001b[36mrun_solution\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     32\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m⏳ Waiting for agent response...\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     34\u001b[39m \u001b[38;5;66;03m# Wait for workflow to complete and get result (blocking)\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m35\u001b[39m result = \u001b[38;5;28;01mawait\u001b[39;00m handle.result()\n\u001b[32m     37\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m * \u001b[32m60\u001b[39m)\n\u001b[32m     38\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m🤖 Agent Response:\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.11/site-packages/temporalio/client.py:1719\u001b[39m, in \u001b[36mWorkflowHandle.result\u001b[39m\u001b[34m(self, follow_runs, rpc_metadata, rpc_timeout)\u001b[39m\n\u001b[32m   1717\u001b[39m         hist_run_id = fail_attr.new_execution_run_id\n\u001b[32m   1718\u001b[39m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1719\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m WorkflowFailureError(\n\u001b[32m   1720\u001b[39m         cause=\u001b[38;5;28;01mawait\u001b[39;00m \u001b[38;5;28mself\u001b[39m._client.data_converter.decode_failure(\n\u001b[32m   1721\u001b[39m             fail_attr.failure\n\u001b[32m   1722\u001b[39m         ),\n\u001b[32m   1723\u001b[39m     )\n\u001b[32m   1724\u001b[39m \u001b[38;5;28;01melif\u001b[39;00m event.HasField(\u001b[33m\"\u001b[39m\u001b[33mworkflow_execution_canceled_event_attributes\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m   1725\u001b[39m     cancel_attr = event.workflow_execution_canceled_event_attributes\n",
-      "\u001b[31mWorkflowFailureError\u001b[39m: Workflow execution failed"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY is not set, skipping trace export\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "async def run_solution():  # Define async function to execute the workflow\n",
     "    \"\"\"Execute the weather agent workflow.\"\"\"\n",
@@ -526,8 +380,7 @@
    "id": "67d93ea1",
    "metadata": {},
    "source": [
-    "In `activities.py`,\n",
-    "comment out:\n",
+    "In the [`activities.py`](#component-1-activitiespy) cell above, comment out:\n",
     "\n",
     "```py\n",
     "# data = await make_api_call(state)\n",
@@ -555,7 +408,7 @@
     "* An API endpoint being fixed\n",
     "* A network issue being resolved\n",
     "\n",
-    "In `activities.py` comment out:\n",
+    "In the [`activities.py`](#component-1-activitiespy) cell, comment out:\n",
     "\n",
     "```py\n",
     "# data = await make_api_call_bug(state)\n",
@@ -566,68 +419,6 @@
     "```py\n",
     "data = await make_api_call(state)\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15c9ef77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def make_api_call(state: str) -> dict:\n",
-    "    \"\"\"Make API call to fetch weather alerts from National Weather Service.\"\"\"\n",
-    "    # Set User-Agent header required by National Weather Service API\n",
-    "    headers = {\"User-Agent\": \"Temporal-Agents-Workshop/1.0 (educational@example.com)\"}\n",
-    "    # Create async HTTP client with 10-second timeout to prevent hanging\n",
-    "    async with httpx.AsyncClient(timeout=10) as client:\n",
-    "        # Make GET request to NWS alerts endpoint for the specified state\n",
-    "        r = await client.get(f\"https://api.weather.gov/alerts/active/area/{state}\", headers=headers)\n",
-    "        # Raise exception if request fails (4xx or 5xx) - Temporal will auto-retry\n",
-    "        r.raise_for_status()\n",
-    "        # Parse JSON response into Python dictionary\n",
-    "        data = r.json()\n",
-    "\n",
-    "    # Return raw data for processing\n",
-    "    return data\n",
-    "\n",
-    "\n",
-    "async def make_api_call_bug(state: str) -> dict:\n",
-    "    \"\"\"Make API call with intentional bug - simulates a failing service.\"\"\"\n",
-    "    # Simulate a service failure by raising an exception\n",
-    "    raise Exception(\"Simulated API failure: Service temporarily unavailable\")\n",
-    "\n",
-    "\n",
-    "@activity.defn(name=\"get_weather\")\n",
-    "async def get_weather(state: str) -> dict:\n",
-    "    \"\"\"Fetch active NWS alerts for a 2-letter US state code (e.g., 'CA').\"\"\"\n",
-    "    # Call the API function to get weather data\n",
-    "    data = await make_api_call(state)\n",
-    "\n",
-    "    # Broken API call to simulate failure\n",
-    "    # data = await make_api_call_bug(state)\n",
-    "\n",
-    "    # Initialize empty list to collect alert information\n",
-    "    alerts = []\n",
-    "    # Loop through first 5 features (weather alerts) in the response\n",
-    "    for f in (data.get(\"features\") or [])[:5]:\n",
-    "        # Extract properties object from each feature (contains alert details)\n",
-    "        p = f.get(\"properties\", {})\n",
-    "        # Build structured alert dictionary with key information\n",
-    "        alerts.append(\n",
-    "            {\n",
-    "                \"event\": p.get(\"event\"),  # Alert type (e.g., \"Flash Flood Warning\")\n",
-    "                \"headline\": p.get(\"headline\"),  # Human-readable alert headline\n",
-    "                \"severity\": p.get(\"severity\"),  # Severity level (e.g., \"Severe\", \"Moderate\")\n",
-    "                \"area\": p.get(\"areaDesc\"),  # Geographic area affected by alert\n",
-    "            }\n",
-    "        )\n",
-    "\n",
-    "    # Return structured response with state, count, and alerts for LLM to interpret\n",
-    "    return {\"state\": state.upper(), \"count\": len(alerts), \"alerts\": alerts}\n",
-    "\n",
-    "\n",
-    "print(\"[OK] Activity 'get_weather' defined\")\n"
    ]
   },
   {
@@ -646,11 +437,17 @@
    "outputs": [],
    "source": [
     "# Kill the old worker and start the new one\n",
-    "import asyncio\n",
     "\n",
-    "x = worker_task.cancel()\n",
+    "# Cancel the first worker and wait for it to stop\n",
+    "first_worker_task.cancel()\n",
+    "try:\n",
+    "    await first_worker_task\n",
+    "except asyncio.CancelledError:\n",
+    "    pass\n",
+    "\n",
+    "# Now start the new worker with the fixed code\n",
     "worker_task = asyncio.create_task(run_worker())\n",
-    "print(\"New worker started!\")\n"
+    "print(\"New worker started!\")"
    ]
   },
   {
